credit  https://github.com/donatj/Circle-Generator for base code

--- a/Hexnicks/style.css
+++ b/Hexnicks/style.css
@@ -47,7 +47,7 @@
   margin-left: 0px;
 }
 body {
-  background: rgb(49, 49, 49); /* Green background with 30% opacity */
+  background: rgb(49, 49, 49);
 }
 .navbar-header {
   width: 100;
