--- a/Hexnicks/style.css
+++ b/Hexnicks/style.css
@@ -91,8 +91,7 @@
   flex-direction: row;
 }
 #outputColumn{
-  width: min-content;
-  min-width: 33.3%;
+  width: 100%;
 }
 #nav-headbar{
   display: flex;
