--- a/CircleGen/style.css
+++ b/CircleGen/style.css
@@ -15,6 +15,10 @@
   src: url(../assets/fonts/MinecraftBoldItalic.otf);
 }
 
+#content {
+  margin: 1em;
+}
+
 body {
   background: rgb(49, 49, 49);
   color: lightgray;
