--- a/AnimTAB/style.css
+++ b/AnimTAB/style.css
@@ -1,23 +1,3 @@
-@font-face {
-  font-family: MinecraftRegular;
-  src: url(../assets/fonts/MinecraftRegular.otf);
-}
-
-@font-face {
-  font-family: MinecraftBold;
-  src: url(../assets/fonts/MinecraftBold.otf);
-}
-
-@font-face {
-  font-family: MinecraftItalic;
-  src: url(../assets/fonts/MinecraftItalic.otf);
-}
-
-@font-face {
-  font-family: MinecraftBoldItalic;
-  src: url(../assets/fonts/MinecraftBoldItalic.otf);
-}
-
 #content {
   margin: 1em;
 }
@@ -38,6 +18,7 @@ label {
 #coloredNick {
   font-size: 4rem;
   word-wrap: break-word;
+  line-height: 1;
 }
 
 #colors {
@@ -57,19 +38,49 @@ label {
   background-size: 800% 200%;
 }
 
+input {
+  font-family: MinecraftRegular !important;
+}
+
+#output {
+  width: 100%;
+}
+
 #outputText {
-  white-space: pre-wrap;
   cursor: pointer;
   height: 200px;
   font-family: MinecraftRegular;
+  background-color: white;
+  border-radius: 5px;
+  color: black;
+  width: 100%;
+  overflow: auto;
+  padding: 1em;
+  margin-top: 0;
 }
 
-#dbold,
-#ditalics,
-#dunderline,
-#dstrike {
+#controls .column {
+  padding-left: 0;
+}
+
+.ui.grid > .row {
+  padding: 0;
+}
+
+.ui.checkbox.row:not(.first) {
+  margin-top: 0.25em;
+}
+
+.ui.checkbox.row:not(.last) {
+  margin-bottom: 0.25em;
+}
+
+.dbold,
+.ditalics,
+.dunderline,
+.dstrike {
   font-family: MinecraftRegular;
-  color: lightgrey;
+  color: lightgrey !important;
 }
 
 #error {
@@ -78,34 +89,6 @@ label {
   color: red;
   display: none;
   margin-bottom: 10px;
-}
-
-.minecraft {
-  font-family: MinecraftRegular;
-}
-
-.minecraftbold {
-  font-family: MinecraftBold;
-}
-
-.minecraftitalic {
-  font-family: MinecraftItalic;
-}
-
-.minecraftibold {
-  font-family: MinecraftBoldItalic;
-}
-
-.minecraftunderline {
-  text-decoration: underline;
-}
-
-.minecraftustrike {
-  text-decoration: underline line-through;
-}
-
-.minecraftstrike {
-  text-decoration: line-through;
 }
 
 @keyframes rainbow_animation {
