--- a/AnimTAB/style.css
+++ b/AnimTAB/style.css
@@ -35,7 +35,7 @@ label {
   color: black;
 }
 
-#coloredNick {
+#animation {
   font-size: 4rem;
   word-wrap: break-word;
 }
@@ -49,7 +49,7 @@ label {
 #title {
   position: relative;
   font-family: MinecraftRegular;
-  background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+  background: linear-gradient(124deg, #00FFE0,#EB00FF);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
