--- a/Gradients/style.css
+++ b/Gradients/style.css
@@ -22,6 +22,17 @@
   margin: 1em;
 }
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.show {display:block;}
+
 .row {
   margin-top: 15px;
   margin-bottom: 15px;
