--- a/site/assets/css/GradientsStyle.css
+++ b/site/assets/css/GradientsStyle.css
@@ -1,21 +1,21 @@
 @font-face {
   font-family: MinecraftRegular;
-  src: url(../assets/fonts/MinecraftRegular.otf);
+  src: url(/fonts/MinecraftRegular.otf);
 }
 
 @font-face {
   font-family: MinecraftBold;
-  src: url(../assets/fonts/MinecraftBold.otf);
+  src: url(/fonts/MinecraftBold.otf);
 }
 
 @font-face {
   font-family: MinecraftItalic;
-  src: url(../assets/fonts/MinecraftItalic.otf);
+  src: url(/fonts/MinecraftItalic.otf);
 }
 
 @font-face {
   font-family: MinecraftBoldItalic;
-  src: url(../assets/fonts/MinecraftBoldItalic.otf);
+  src: url(/fonts/MinecraftBoldItalic.otf);
 }
 
 #content {
