--- a/site/templates/AnimTab.ejs
+++ b/site/templates/AnimTab.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header", { path, title: "Animated TAB"}) %>
-<link rel="stylesheet" href="/css/AnimTabStyle.css">
+<link rel="stylesheet" href="/css/AnimTABStyle.css">
 
 <div id="hexColorTemplate" style="display:none;">
   <div class="row">
