Hopefully last fix

--- a/site/templates/AnimTab.ejs
+++ b/site/templates/AnimTab.ejs
@@ -98,5 +98,5 @@
   </div>
 </div>
 <script src="/js/jscolor.js"></script>
-<script src="/js/AnimTabScript.js"></script>
+<script src="/js/AnimTABScript.js"></script>
 <%- include("partials/footer") %>
