--- a/site/templates/AnimTab.ejs
+++ b/site/templates/AnimTab.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "Animated TAB"}) %>
+<%- include("partials/header", { queryPreset, path, title: "Animated TAB"}) %>
 <link rel="stylesheet" href="/css/AnimTABStyle.css">
 
 <div id="hexColorTemplate" style="display:none;">
@@ -75,6 +75,27 @@
                    oninput="updateOutputText(); toggleColors(this.value);"/>
           </div>
           <div class="row">
+            <label for="exportPreset">Export Preset</label>
+            <button class="form-control" 
+            style="width: 125px;" 
+            type="button" id="exportPreset"
+            onclick="copyTextToClipboard(exportPreset());">Copy Preset</button>
+          </div>
+          <div class="row">
+            <label for="importPreset">Import Preset</label>
+            <button class="form-control" 
+            style="width: 125px;" 
+            type="button" id="importPreset"
+            onclick="showfield('importInput')"
+            >Import Preset</button>
+            <div id="importInput" style="display: none;">
+              Paste Here: <input type="text" name="ImportInput"
+              class="form-control"
+              style="width: 400px;"
+              onchange="javascript: importPreset(this.value)" />
+            </div>
+          </div>
+          <div class="row">
             <div id="dbold">
               <input type="checkbox" id="bold" onclick="updateOutputText();"/>
               <label for="bold">Bold</label>
@@ -99,4 +120,8 @@
 </div>
 <script src="/js/jscolor.js"></script>
 <script src="/js/AnimTABScript.js"></script>
+<script>
+  let qPreset = '<%- queryPreset %>';
+  if(qPreset) importPreset(qPreset);
+</script>
 <%- include("partials/footer") %>
