--- a/site/templates/Gradients.ejs
+++ b/site/templates/Gradients.ejs
@@ -1,5 +1,8 @@
 <%- include("partials/header", { queryPreset, path, title: "Hex Gradient Creator"}) %>
 <link rel="stylesheet" href="/css/GradientsStyle.css">
+<link rel="preload" href="/fonts/MinecraftBold.otf" as="font" type="font/otf" crossorigin>
+<link rel="preload" href="/fonts/MinecraftItalic.otf" as="font" type="font/otf" crossorigin>
+<link rel="preload" href="/fonts/MinecraftBoldItalic.otf" as="font" type="font/otf" crossorigin>
 
 <div id="hexColorTemplate" style="display:none;">
   <div class="row">
