--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -15,10 +15,9 @@
     <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-        <a class="navbar-brand" href="#">SimplyMC</a>
+        <a class="navbar-brand" href="/">SimplyMC</a>
         </div>
         <ul class="nav navbar-nav">
-        <li><a href="/">Home</a></li>
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Gradients <span class="caret"></span></a>
             <ul class="dropdown-menu">
