bruh it didnt push tab

--- a/site/templates/AnimTab.ejs
+++ b/site/templates/AnimTab.ejs
@@ -1,5 +1,8 @@
 <%- include("partials/header", { queryPreset, path, title: "Animated TAB"}) %>
 <link rel="stylesheet" href="/css/AnimTABStyle.css">
+<link rel="preload" href="/fonts/MinecraftBold.otf" as="font" type="font/otf">
+<link rel="preload" href="/fonts/MinecraftItalic.otf" as="font" type="font/otf">
+<link rel="preload" href="/fonts/MinecraftBoldItalic.otf" as="font" type="font/otf">
 
 <div id="hexColorTemplate" style="display:none;">
   <div class="row">
