--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -10,6 +10,9 @@
     <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <link rel="preload" href="/fonts/MinecraftBold.otf" as="font" type="font/otf">
+    <link rel="preload" href="/fonts/MinecraftItalic.otf" as="font" type="font/otf">
+    <link rel="preload" href="/fonts/MinecraftBoldItalic.otf" as="font" type="font/otf">
 </head>
 <body>
     <nav class="navbar navbar-inverse">
