Actually add them

--- a/site/templates/Gradients.ejs
+++ b/site/templates/Gradients.ejs
@@ -68,6 +68,12 @@
                       onchange="preset(this.value); updateOutputText(event); ">
                 <option value='0'>None</option>
                 <option value='1'>Rainbow</option>
+                <option value='2'>Skyline</option>
+                <option value='3'>Mango</option>
+                <option value='4'>Vice City</option>
+                <option value='5'>Dawn</option>
+                <option value='6'>Rose</option>
+                <option value='7'>Firewatch</option>
               </select>
             </div>
           </div>
