--- a/site/templates/Gradients.ejs
+++ b/site/templates/Gradients.ejs
@@ -56,7 +56,8 @@
                 <option value='5'>/nick (&x&r&r&g&g&b&b)</option>
                 <option value='6'>console (§x§r§r§g§g§b§b)</option>
                 <option value='7'>bbcode [COLOR=#rrggbb]</option>
-                <option value='8'>custom</option>
+                <option value='8'>skript (<##rrggbb>)</option>
+                <option value='9'>custom</option>
               </select>
             </div>
           </div>
