--- a/site/templates/Gradients.ejs
+++ b/site/templates/Gradients.ejs
@@ -1,5 +1,8 @@
 <%- include("partials/header", { queryPreset, path, title: "Hex Gradient Creator"}) %>
 <link rel="stylesheet" href="/css/GradientsStyle.css">
+<link rel="preload" href="/fonts/MinecraftBold.otf" as="font" type="font/otf">
+<link rel="preload" href="/fonts/MinecraftItalic.otf" as="font" type="font/otf">
+<link rel="preload" href="/fonts/MinecraftBoldItalic.otf" as="font" type="font/otf">
 
 <div id="hexColorTemplate" style="display:none;">
   <div class="row">
@@ -39,7 +42,8 @@
             <div class="col-md-3" style="padding-left: 0;">
               <label for="nickname">Text</label>
               <input class="form-control" id="nickname" type="text" maxlength="100" placeholder="Your Text"
-                     value="SimplyMC" oninput="updateOutputText(event);">
+                     value="SimplyMC" oninput="javascript: updateOutputText(event);"
+                     onchange="javascript: updateOutputText(event)">
             </div>
           </div>
           <div class="row">
@@ -56,27 +60,7 @@
                 <option value='5'>/nick (&x&r&r&g&g&b&b)</option>
                 <option value='6'>console (§x§r§r§g§g§b§b)</option>
                 <option value='7'>bbcode [COLOR=#rrggbb]</option>
-                <option value='8'>custom</option>
               </select>
-            </div>
-          </div>
-          <div class="row hidden" id="customFormatWrapper">
-            <div class="col-md-3" style="padding-left: 0;">
-              <label for="customFormat">Custom Format</label>
-              <input type="text"
-                     class="form-control"
-                     id="customFormat"
-                     oninput="updateOutputText(event);">
-              <p>Placeholders:</p>
-              <ul>
-                <li>$1 - First RR hex</li>
-                <li>$2 - Second RR hex</li>
-                <li>$3 - First GG hex</li>
-                <li>$4 - Second GG hex</li>
-                <li>$5 - First BB hex</li>
-                <li>$6 - Second BB hex</li>
-                <li>$c - Character to format</li>
-              </ul>
             </div>
           </div>
           <div class="row">
@@ -87,26 +71,20 @@
                       onchange="preset(this.value); updateOutputText(event); ">
                 <option value='0'>None</option>
                 <option value='1'>Rainbow</option>
-                <option value='2'>Skyline</option>
-                <option value='3'>Mango</option>
-                <option value='4'>Vice City</option>
-                <option value='5'>Dawn</option>
-                <option value='6'>Rose</option>
-                <option value='7'>Firewatch</option>
               </select>
             </div>
           </div>
           <div class="row">
             <label for="exportPreset">Export Preset</label>
-            <button class="form-control"
-            style="width: 125px;"
+            <button class="form-control" 
+            style="width: 125px;" 
             type="button" id="exportPreset"
             onclick="copyTextToClipboard(exportPreset());">Copy Preset</button>
           </div>
           <div class="row">
             <label for="importPreset">Import Preset</label>
-            <button class="form-control"
-            style="width: 125px;"
+            <button class="form-control" 
+            style="width: 125px;" 
             type="button" id="importPreset"
             onclick="showfield('importInput')"
             >Import Preset</button>
@@ -125,7 +103,7 @@
                    onchange="updateOutputText(event); toggleColors(this.value);"
                    oninput="updateOutputText(event); toggleColors(this.value);"/>
           </div>
-          <div class="row" id="formatSelector">
+          <div class="row">
             <div id="dbold">
               <input type="checkbox" id="bold" onclick="updateOutputText(event);"/>
               <label for="bold">Bold</label>
