--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -10,9 +10,6 @@
     <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <link rel="preload" href="/fonts/MinecraftBold.otf" as="font" type="font/otf">
-    <link rel="preload" href="/fonts/MinecraftItalic.otf" as="font" type="font/otf">
-    <link rel="preload" href="/fonts/MinecraftBoldItalic.otf" as="font" type="font/otf">
 </head>
 <body>
     <nav class="navbar navbar-inverse">
@@ -28,6 +25,7 @@
             <li><a href="/AnimTAB">Animated TAB</a></li>
             </ul>
         </li>
+        <li><a href="/AnimTexture">Animated Texture</a></li>
         <li><a href="#">More Coming Soon</a></li>
         <li><a href="https://github.com/Oli-idk/SimplyMC"><img src="/images/github.png" height="20px"></a></a></li>
         <li><a href="https://discord.akiradev.xyz"><img src="/images/discord.png" height="20px"></a></a></li>
