center page not found text and change css file

--- a/site/templates/notfound.ejs
+++ b/site/templates/notfound.ejs
@@ -1,9 +1,9 @@
 <%- include("partials/header", { path, title: "Animated Texture Creator"}) %>
-<link rel="stylesheet" href="/css/AnimTexture.css">
+<link rel="stylesheet" href="/css/style.css">
 
 <div id="content">
   <div class="container-fluid">
-    <div class="row">
+    <div class="row" style="text-align: center;">
       <h1 id="title">This page could not be found!</h1>
       <p>Did you misspell the URL?</p>
     </div>
