--- a/site/templates/gradients.ejs
+++ b/site/templates/gradients.ejs
@@ -60,7 +60,27 @@
                 <option value='5'>/nick (&x&r&r&g&g&b&b)</option>
                 <option value='6'>console (§x§r§r§g§g§b§b)</option>
                 <option value='7'>bbcode [COLOR=#rrggbb]</option>
+                <option value='8'>custom</option>
               </select>
+            </div>
+          </div>
+          <div class="row hidden" id="customFormatWrapper">
+            <div class="col-md-3" style="padding-left: 0;">
+              <label for="customFormat">Custom Format</label>
+              <input type="text"
+                     class="form-control"
+                     id="customFormat"
+                     oninput="updateOutputText(event);">
+              <p>Placeholders:</p>
+              <ul>
+                <li>$1 - First RR hex</li>
+                <li>$2 - Second RR hex</li>
+                <li>$3 - First GG hex</li>
+                <li>$4 - Second GG hex</li>
+                <li>$5 - First BB hex</li>
+                <li>$6 - Second BB hex</li>
+                <li>$c - Character to format</li>
+              </ul>
             </div>
           </div>
           <div class="row">
@@ -71,6 +91,12 @@
                       onchange="preset(this.value); updateOutputText(event); ">
                 <option value='0'>None</option>
                 <option value='1'>Rainbow</option>
+                <option value='2'>Skyline</option>
+                <option value='3'>Mango</option>
+                <option value='4'>Vice City</option>
+                <option value='5'>Dawn</option>
+                <option value='6'>Rose</option>
+                <option value='7'>Firewatch</option>
               </select>
             </div>
           </div>
@@ -103,7 +129,7 @@
                    onchange="updateOutputText(event); toggleColors(this.value);"
                    oninput="updateOutputText(event); toggleColors(this.value);"/>
           </div>
-          <div class="row">
+          <div class="row" id="formatSelector">
             <div id="dbold">
               <input type="checkbox" id="bold" onclick="updateOutputText(event);"/>
               <label for="bold">Bold</label>
